# CSV-ORM

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  main.cpp
examples/: basic_usage.cpp  data.csv
include/: csvorm.hpp
include/csvorm/: Field.hpp  FieldInfo.hpp  Model.hpp  ORM.hpp  Query.hpp  Table.hpp  TableMutation.hpp  TableQuery.hpp  Type.hpp  datatypes.hpp  parsing.hpp  query.hpp  row.hpp  table.hpp
src/: datatypes.cpp  model.cpp  orm.cpp  query.cpp  row.cpp  table.cpp
tests/: data.csv  test_main.cpp
